feat(infra): enable SSL/TLS infrastructure for test and CI environments
Infrastructure Changes:
- Commit self-signed SSL certificates for dev/test/CI use
- Mount SSL certs in CI docker-compose (app and callback services)
- Update .gitignore to allow .pem certs but ignore production certs

Environment Configuration:
- Create .env.ci.example with HTTPS URLs and SSL config
- Create .env.test.example with HTTPS CORS and callback URLs
- Create .env.dev.example (renamed from .env.example)
- Update .gitignore: only commit .example files, never actual .env files

Security:
- Self-signed certs are safe to commit (localhost only, no secrets)
- All actual .env files remain ignored (contain real secrets)
- Follow best practice: .example files as templates only

Next Steps:
- Add pytest fixtures for HTTPS testing
- Test all 305 tests pass with HTTPS
- Verify CI pipeline works

Part 1 of SSL/TLS enablement across all environments.

--- a/.gitignore
+++ b/.gitignore
@@ -9,17 +9,20 @@
 # Ignore .env directories (Python virtual envs) but NOT our env/ config directory
 **/.env/
 
-# Ignore secret env files in env/ directory (but allow .env.ci and examples)
+# Ignore ALL actual env files in env/ directory (they contain secrets)
+# Only commit .example files
 env/.env
-env/.env.dev
-env/.env.test
-env/.env.prod
-env/.env.local
+env/.env.*
+!env/.env.*.example
 
-# Certificates (self-signed, can be regenerated)
-certs/*.pem
+# Certificates
+# Allow self-signed dev/test certs (.pem files are committed for CI/dev/test)
+# Ignore production certs and private keys
 certs/*.key
 certs/*.crt
+certs/prod*.pem
+certs/production*.pem
+certs/staging*.pem
 
 # Python
 __pycache__/
