fix(infra): fix PostgreSQL health checks and update SSL/TLS docs
- Fix PostgreSQL health check to use correct database name
  - Test: pg_isready now checks 'dashtam_test' database (not 'dashtam_test_user')
  - CI: Same fix applied to CI environment
  - Result: Zero FATAL error messages in logs

- Update SSL/TLS implementation documentation
  - Mark ssl-tls-test-ci-implementation.md as COMPLETE
  - Update smoke-test-organization-research.md with SSL completion status
  - Document all achievements: test env HTTPS, CI env HTTPS, 305 tests passing

Changes:
- compose/docker-compose.test.yml: Updated health check command
- compose/docker-compose.ci.yml: Updated health check command, updated SSL config
- docs/: Updated implementation and research docs to reflect completion
- env/.env.ci: Updated with SSL configuration

Testing:
- Test environment: All 305 tests passing with HTTPS enabled
- CI environment: All 305 tests passing locally with HTTPS enabled
- No PostgreSQL FATAL errors in logs

Closes: SSL/TLS implementation for test and CI environments

--- a/compose/docker-compose.ci.yml
+++ b/compose/docker-compose.ci.yml
@@ -25,7 +25,7 @@ services:
       - /var/lib/postgresql/data
       - /var/run/postgresql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${TEST_POSTGRES_USER:-dashtam_test_user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-dashtam_test_user} -d ${POSTGRES_DB:-dashtam_test}"]
       interval: 2s
       timeout: 2s
       retries: 10
