--- a/compose/docker-compose.test.yml
+++ b/compose/docker-compose.test.yml
@@ -27,7 +27,7 @@ services:
       # Use tmpfs for ephemeral storage - faster and ensures clean state
       - /var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${TEST_POSTGRES_USER:-dashtam_test_user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-dashtam_test_user} -d ${POSTGRES_DB:-dashtam_test}"]
       interval: 5s
       timeout: 3s
       retries: 5
