--- a/env/.env.ci
+++ b/env/.env.ci
@@ -9,9 +9,18 @@ ENVIRONMENT=testing
 DEBUG=false
 LOG_LEVEL=WARNING
 
-# Application URLs (internal Docker network communication)
-API_BASE_URL=http://app:8000
-CALLBACK_BASE_URL=http://callback:8182
+# Application URLs (internal Docker network communication - HTTPS)
+API_BASE_URL=https://app:8000
+CALLBACK_BASE_URL=https://callback:8182
+
+# SSL/TLS Configuration (self-signed certs for CI)
+SSL_CERT_FILE=certs/cert.pem
+SSL_KEY_FILE=certs/key.pem
+CALLBACK_SSL_CERT_FILE=certs/callback_cert.pem
+CALLBACK_SSL_KEY_FILE=certs/callback_key.pem
+
+# CORS Configuration (HTTPS for production parity)
+CORS_ORIGINS=https://app:8000,https://localhost:8000
 
 # PostgreSQL Configuration
 POSTGRES_DB=dashtam_test
