feat(infra): Enable SSL/TLS (HTTPS) in Test and CI Environments (#17)
* feat(infra): enable SSL/TLS infrastructure for test and CI environments

Infrastructure Changes:
- Commit self-signed SSL certificates for dev/test/CI use
- Mount SSL certs in CI docker-compose (app and callback services)
- Update .gitignore to allow .pem certs but ignore production certs

Environment Configuration:
- Create .env.ci.example with HTTPS URLs and SSL config
- Create .env.test.example with HTTPS CORS and callback URLs
- Create .env.dev.example (renamed from .env.example)
- Update .gitignore: only commit .example files, never actual .env files

Security:
- Self-signed certs are safe to commit (localhost only, no secrets)
- All actual .env files remain ignored (contain real secrets)
- Follow best practice: .example files as templates only

Next Steps:
- Add pytest fixtures for HTTPS testing
- Test all 305 tests pass with HTTPS
- Verify CI pipeline works

Part 1 of SSL/TLS enablement across all environments.

* feat(tests): add HTTPS SSL warning suppression for test environments

- Add pytest fixture to disable SSL warnings for self-signed certs
- Applies to all test environments (test, CI)
- Auto-runs for all test sessions (autouse=True, session scope)
- Keeps test output clean while testing HTTPS functionality

Part 2 of SSL/TLS enablement - test configuration complete.

* fix(infra): fix PostgreSQL health checks and update SSL/TLS docs

- Fix PostgreSQL health check to use correct database name
  - Test: pg_isready now checks 'dashtam_test' database (not 'dashtam_test_user')
  - CI: Same fix applied to CI environment
  - Result: Zero FATAL error messages in logs

- Update SSL/TLS implementation documentation
  - Mark ssl-tls-test-ci-implementation.md as COMPLETE
  - Update smoke-test-organization-research.md with SSL completion status
  - Document all achievements: test env HTTPS, CI env HTTPS, 305 tests passing

Changes:
- compose/docker-compose.test.yml: Updated health check comma

--- a/compose/docker-compose.ci.yml
+++ b/compose/docker-compose.ci.yml
@@ -25,7 +25,7 @@ services:
       - /var/lib/postgresql/data
       - /var/run/postgresql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${TEST_POSTGRES_USER:-dashtam_test_user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-dashtam_test_user} -d ${POSTGRES_DB:-dashtam_test}"]
       interval: 2s
       timeout: 2s
       retries: 10
@@ -81,6 +81,7 @@ services:
       - ../tests:/app/tests:ro
       - ../alembic:/app/alembic:ro
       - ../alembic.ini:/app/alembic.ini:ro
+      - ../certs:/app/certs:ro
       - ../pyproject.toml:/app/pyproject.toml:ro
       - ../uv.lock:/app/uv.lock:ro
     depends_on:
