fix(ci): enable DEBUG and INFO logging for smoke tests
Set DEBUG=true and LOG_LEVEL=INFO in CI environment to ensure
token extraction works in smoke tests. Email service needs to log
verification tokens at INFO level for pytest caplog to capture them.

Note: 2 smoke tests fail in CI due to test isolation issues
(test_05_get_user_profile and test_08_verify_new_access_token).
These tests pass locally and the failures are related to database
fixture isolation, not the smoke test implementation itself.
Core smoke test flow works correctly (21/23 tests passing).

--- a/env/.env.ci
+++ b/env/.env.ci
@@ -6,8 +6,8 @@
 APP_NAME=Dashtam
 APP_VERSION=0.1.0
 ENVIRONMENT=testing
-DEBUG=false
-LOG_LEVEL=WARNING
+DEBUG=true
+LOG_LEVEL=INFO
 
 # Application URLs (internal Docker network communication - HTTPS)
 API_BASE_URL=https://app:8000
