fix(tests): resolve smoke test failures in CI environment
## Problem
Smoke tests passing in dev/test but failing in CI with 'User not found' errors
during email verification step. Root cause was SQLAlchemy session state caching
combined with test fixture ordering issues.

## Root Cause Analysis
1. **Session State Caching**: SQLAlchemy session was caching objects between
   HTTP requests in TestClient, causing stale data reads
2. **Fixture Ordering**: Database setup fixture had autouse=False, causing
   tests to run before schema was ready
3. **Environment Differences**: CI timing and session lifecycle differed from
   local test environment

## Solution Implemented

### 1. Session State Management (tests/conftest.py)
- Added session.expire_all() after every commit in AsyncToSyncWrapper
- Added session.expire_all() at start of each request in override_get_session
- Ensures committed data is visible to subsequent requests (critical for CI)

### 2. Fixture Ordering (tests/conftest.py)
- Changed setup_test_database fixture from autouse=False to autouse=True
- Blocks all tests until database schema is ready
- Works in both CI (migrations) and local (table creation) environments

### 3. Smoke Test Isolation (tests/smoke/test_complete_auth_flow.py)
- Added clean_database_for_smoke_test fixture with PostgreSQL table introspection
- Automatically truncates ALL tables (except alembic_version) before each smoke test
- Uses TRUNCATE with RESTART IDENTITY CASCADE for complete cleanup
- Scale-safe: no manual model maintenance required as schema evolves
- Expires session after truncate to clear SQLAlchemy identity map

### 4. CI Environment Configuration
- Added missing environment variables: API_V1_PREFIX, DEBUG
- Aligned CI config with test environment for consistency
- Removed synchronous_commit=off from PostgreSQL (prevented read-after-write issues)

## Test Results

✅ **Test Environment**: 309/310 tests passing (99.7%)
✅ **CI Environment**: 309/310 tests passing (99.7%)
✅ **S

--- a/compose/docker-compose.ci.yml
+++ b/compose/docker-compose.ci.yml
@@ -33,10 +33,12 @@ services:
     networks:
       - dashtam-ci-network
     # CI-specific PostgreSQL configuration for maximum speed
+    # NOTE: synchronous_commit=on is required for test data visibility
+    # We removed synchronous_commit=off because it caused read-after-write
+    # inconsistencies in smoke tests (user not found after registration)
     command: >
       postgres
       -c fsync=off
-      -c synchronous_commit=off
       -c full_page_writes=off
       -c random_page_cost=1.0
       -c shared_buffers=256MB
