--- a/env/.env.ci.example
+++ b/env/.env.ci.example
@@ -6,8 +6,9 @@
 APP_NAME=Dashtam
 APP_VERSION=0.1.0
 ENVIRONMENT=testing
-DEBUG=false
-LOG_LEVEL=WARNING
+DEBUG=true
+LOG_LEVEL=INFO
+API_V1_PREFIX=/api/v1
 
 # Application URLs (internal Docker network communication - HTTPS)
 API_BASE_URL=https://app:8000
@@ -49,6 +50,7 @@ TESTING=true
 CI=true
 DISABLE_EXTERNAL_CALLS=true
 MOCK_PROVIDERS=true
+FAST_ENCRYPTION=true
 PYTHONUNBUFFERED=1
 
 # Mock Provider Configuration for Testing
