--- a/pytest.ini
+++ b/pytest.ini
@@ -26,6 +26,7 @@ markers =
     api: API/E2E tests
     database: Database-specific tests
     slow: Slow-running tests
+    smoke_test: Smoke tests (end-to-end flow validation with state preservation)
 
 # Logging
 log_cli = false
