feat(test): implement modular smoke tests with isolated pytest sessions
- Migrate from monolithic smoke test (1 test) to modular design (22 tests)
- Implement pytest marker-based isolation (@pytest.mark.smoke)
- Organize smoke tests into logical files by concern:
  * test_auth_flow.py: 18 sequential auth flow tests
  * test_system_health.py: 2 system health tests
  * test_auth_validation.py: 2 security validation tests
- Update Makefile with test-main, test-smoke, test commands
- Update GitHub Actions CI with separate test-main and test-smoke jobs
- Fix all deprecation warnings (datetime.utcnow, utcfromtimestamp, httpx)
- Fix pytest collection warning (TestSettings -> _TestSettings)
- Update README.md and smoke test documentation

Benefits:
- Clear CI/CD output: 18/18 tests instead of 1/1
- Easy debugging: Can run individual test steps
- Better pytest output: Immediate failure identification
- Matches original shell script design (17 steps -> 18 tests)
- Zero warnings in test suite

Test Results:
- Main tests: 305 passed, 77% coverage
- Smoke tests: 22 passed, isolated session
- Total: 327 tests, all passing, 0 warnings

Closes #N/A

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ on:
     branches: [ main, develop, development ]
 
 jobs:
-  test:
-    name: Run Tests
+  test-main:
+    name: Main Test Suite
     runs-on: ubuntu-latest
     
     steps:
@@ -18,26 +18,38 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and run tests
+      - name: Start test environment
         run: |
-          docker compose -f compose/docker-compose.ci.yml up \
-            --build \
-            --abort-on-container-exit \
-            --exit-code-from app
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          docker compose -f compose/docker-compose.ci.yml up -d --build
+
+      - name: Wait for services to be ready
+        run: |
+          echo "Waiting for PostgreSQL..."
+          docker compose -f compose/docker-compose.ci.yml exec -T postgres pg_isready -U dashtam_test_user -d dashtam_test || sleep 2
+          echo "Services ready"
+
+      - name: Run main test suite (excludes smoke tests)
+        run: |
+          docker compose -f compose/docker-compose.ci.yml exec -T app \
+            uv run pytest tests/ -v \
+            --cov=src \
+            --cov-report=xml:/app/coverage.xml \
+            --cov-report=term-missing \
+            --junitxml=/app/test-results.xml \
+            -m "not smoke"
 
       - name: Copy coverage reports from container
         if: always()
         run: |
-          docker cp dashtam-ci-app:/app/coverage.xml ./coverage.xml || true
-          docker cp dashtam-ci-app:/app/test-results.xml ./test-results.xml || true
+          docker cp dashtam-ci-app:/app/coverage.xml ./coverage-main.xml || true
+          docker cp dashtam-ci-app:/app/test-results.xml ./test-results-main.xml || true
 
       - name: Upload coverage to Codecov
         if: always()
         uses: codecov/codecov-action@v5
         with:
-          files: ./coverage.xml
+          files: ./coverage-main.xml
+          flags: main-tests
           fail_ci_if_error: false
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
@@ -46,10 +58,54 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
+          name: test-results-main
           path: |
-            test-results.xml
-            coverage.xml
+            test-results-main.xml
+            coverage-main.xml
+
+      - name: Cleanup
+        if: always()
+        run: docker compose -f compose/docker-compose.ci.yml down -v
+
+  test-smoke:
+    name: Smoke Tests
+    runs-on: ubuntu-latest
+    needs: test-main  # Run after main tests pass
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Start test environment (isolated for smoke tests)
+        run: |
+          docker compose -f compose/docker-compose.ci.yml up -d --build
+
+      - name: Wait for services to be ready
+        run: |
+          echo "Waiting for PostgreSQL..."
+          docker compose -f compose/docker-compose.ci.yml exec -T postgres pg_isready -U dashtam_test_user -d dashtam_test || sleep 2
+          echo "Services ready"
+
+      - name: Run smoke tests (isolated session)
+        run: |
+          docker compose -f compose/docker-compose.ci.yml exec -T app \
+            uv run pytest -m smoke -v \
+            --junitxml=/app/smoke-results.xml
+
+      - name: Copy smoke test results from container
+        if: always()
+        run: |
+          docker cp dashtam-ci-app:/app/smoke-results.xml ./smoke-results.xml || true
+
+      - name: Upload smoke test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results-smoke
+          path: smoke-results.xml
 
       - name: Cleanup
         if: always()
