--- a/pytest.ini
+++ b/pytest.ini
@@ -27,6 +27,7 @@ markers =
     database: Database-specific tests
     slow: Slow-running tests
     smoke_test: Smoke tests (end-to-end flow validation with state preservation)
+    smoke: Smoke tests (run in separate isolated session)
 
 # Logging
 log_cli = false
