fix(ci): prevent auto-running tests in docker-compose.ci.yml
The CI docker-compose file was automatically running ALL tests (including
smoke tests) on container startup, then GitHub Actions would try to exec
into an already-exited container, causing exit code 137 failures.

Changes:
- Remove automatic test execution from app service command
- Keep container alive with 'tail -f /dev/null' for GitHub Actions to exec tests
- Run only migrations on startup, wait for GitHub Actions to trigger tests
- This matches the intended workflow: compose up -> exec tests -> compose down

Fixes the intermittent exit 137 errors in GitHub Actions CI pipeline.
The issue was NOT memory-related but a race condition between container
startup tests and GitHub Actions exec commands.

--- a/compose/docker-compose.ci.yml
+++ b/compose/docker-compose.ci.yml
@@ -93,7 +93,7 @@ services:
         condition: service_healthy
     networks:
       - dashtam-ci-network
-    # Run migrations, then tests, and exit with proper status code
+    # Run migrations and keep container alive for GitHub Actions to exec tests
     command: >
       sh -c "
         set -e && 
@@ -104,13 +104,10 @@ services:
         echo 'Running Alembic migrations...' && 
         uv run alembic upgrade head && 
         echo '' && 
-        echo 'Running test suite...' && 
+        echo 'Migrations complete. Ready for tests.' && 
+        echo 'Keeping container alive for GitHub Actions...' && 
         echo '' && 
-        uv run pytest tests/ -v --cov=src --cov-report=xml --cov-report=term-missing --junit-xml=test-results.xml --maxfail=5 || exit 1 && 
-        echo '' && 
-        echo '=============================================='  && 
-        echo 'All tests passed!' && 
-        echo '=============================================='  
+        tail -f /dev/null
       "
 
   # OAuth Callback Server (CI) - Required for OAuth tests
