--- a/compose/docker-compose.ci.yml
+++ b/compose/docker-compose.ci.yml
@@ -33,11 +33,14 @@ services:
     networks:
       - dashtam-ci-network
     # CI-specific PostgreSQL configuration for maximum speed
-    # NOTE: synchronous_commit=on is required for test data visibility
-    # We removed synchronous_commit=off because it caused read-after-write
-    # inconsistencies in smoke tests (user not found after registration)
+    # ARCHITECTURE: Each CI job (test-main, test-smoke) runs in completely isolated session
+    # - Each job starts fresh PostgreSQL instance (tmpfs, ephemeral)
+    # - No data sharing between jobs (test-main → cleanup → test-smoke starts fresh)
+    # - synchronous_commit=off is SAFE because each session is atomic and isolated
+    # - Previous read-after-write issues were from single-session runs (now fixed)
     command: >
       postgres
+      -c synchronous_commit=off
       -c fsync=off
       -c full_page_writes=off
       -c random_page_cost=1.0
