chore(docs): configure markdown linting and fix all violations
- Add markdownlint-cli2 configuration (.markdownlint-cli2.jsonc)
- Update markdownlint rules config (.markdownlint.jsonc)
- Remove deprecated config files (.markdownlint.yaml, .markdownlintignore)
- Fix all markdown linting violations across 57 documentation files
- Remove inline MD013 enable directive causing false positives
- Clean up temporary backup files (test_complete_auth_flow.py.*)
- Delete obsolete PR_DESCRIPTION.md file

Configuration Changes:
- Single source of truth: .markdownlint.jsonc for rules
- CLI config: .markdownlint-cli2.jsonc references main config
- Ignore patterns: archived docs, node_modules, build outputs
- Disabled rules: MD013 (line length), MD033 (inline HTML), MD034 (bare URLs)

All documentation now passes markdown linting with 0 errors.

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -1,6 +1,9 @@
 {
   "$schema": "https://raw.githubusercontent.com/DavidAnson/markdownlint/main/schema/markdownlint-config-schema.json",
   
+  // Markdownlint rules configuration
+  // Used by: VS Code extension, markdownlint-cli2 (via .markdownlint-cli2.jsonc)
+  
   // Default: all rules enabled
   "default": true,
   
