--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,10 @@ dev = [
     "types-pytz>=2025.2.0.20250809",
     "types-requests>=2.32.4.20250913",
 ]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-awesome-pages-plugin>=2.10.1",
+    "mkdocs-material>=9.6.22",
+    "mkdocs-mermaid2-plugin>=1.2.3",
+    "mkdocstrings[python]>=0.30.1",
+]
