fix(ci): remove .env.ci from version control and add runtime copy
**Problem:**
- .env.ci was accidentally tracked in git (contains config values)
- Should follow same pattern as .env.dev and .env.test (gitignored)
- Only .env.*.example files should be in version control

**Changes:**
- Remove env/.env.ci from git tracking (git rm --cached)
- Add CI workflow step to copy .env.ci.example -> .env.ci at runtime
- Update .gitignore comment to clarify all .env files should be ignored
- CI workflow updated in both test-main and test-smoke jobs

**Why This Matters:**
- Prevents accidental commit of environment-specific config
- Follows security best practices (secrets in .env, templates in .example)
- Consistent pattern across all environments (dev, test, ci, prod)

**Testing:**
- Verified docker-compose.ci.yml config validates with copied .env.ci
- Confirmed .env.ci is now properly gitignored
- CI workflow will copy .env.ci.example before docker compose up

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Prepare CI environment configuration
+        run: |
+          cp env/.env.ci.example env/.env.ci
+          echo "✅ CI environment configuration prepared"
+
       - name: Start test environment
         run: |
           docker compose -f compose/docker-compose.ci.yml up -d --build
@@ -78,6 +83,11 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Prepare CI environment configuration
+        run: |
+          cp env/.env.ci.example env/.env.ci
+          echo "✅ CI environment configuration prepared"
 
       - name: Start test environment (isolated for smoke tests)
         run: |
