feat(docs): set up MkDocs with Material theme
**Phase 1 Complete:**
- Install MkDocs dependencies as optional "docs" group
- Configure Dockerfile to install all groups in dev environment only
- Update docker-compose.dev.yml to mount entire project root
- Generate mkdocs.yml using official `mkdocs new` command
- Configure Material theme with dark/light mode
- Enable Mermaid diagram support
- Enable code highlighting and copy buttons

**Changes:**
- docker/Dockerfile: Add --all-groups flag to development stage
- compose/docker-compose.dev.yml: Mount entire project (..:/app:rw) with .venv exclusion
- mkdocs.yml: Material theme configuration with navigation and search features
- pyproject.toml: MkDocs dependencies in [project.optional-dependencies] docs group

**Benefits:**
- Full project visibility in dev container (no more docker cp needed)
- MkDocs available for documentation development
- Proper dependency isolation (docs group only in dev)
- Standard mkdocs.yml generated by official tool

**Known Issues:**
- 83 documentation warnings (broken links, missing files)
- These will be addressed in Phase 2 (navigation structure)

**Testing:**
- mkdocs build runs successfully (with expected warnings)
- All environments verified (dev, test, ci)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,8 +40,8 @@ FROM base AS development
 # Copy dependency files (as appuser)
 COPY --chown=appuser:appuser pyproject.toml uv.lock ./
 
-# Install dependencies from lockfile
-RUN uv sync --frozen
+# Install dependencies from lockfile (including docs group for MkDocs)
+RUN uv sync --frozen --all-groups
 
 # Copy application code (as appuser)
 COPY --chown=appuser:appuser . .
