--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,3 +90,63 @@ markdown_extensions:
 plugins:
   - search
   - mermaid2
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          options:
+            docstring_style: google
+            show_source: true
+            show_root_heading: true
+            show_root_toc_entry: true
+            show_object_full_path: false
+            show_category_heading: true
+            show_if_no_docstring: false
+            show_signature: true
+            show_signature_annotations: true
+            separate_signature: true
+            members_order: source
+            group_by_category: true
+            show_bases: true
+            show_inheritance_diagram: false
+
+# Navigation
+nav:
+  - Home: index.md
+  - Getting Started:
+    - Quick Start: setup/quick-start.md
+    - Installation: setup/installation.md
+  - API Reference:
+    - Overview: api/index.md
+    - Services: api/services.md
+    - Models: api/models.md
+    - Core: api/core.md
+  - Development:
+    - Architecture:
+      - Overview: development/architecture/overview.md
+      - JWT Authentication: development/architecture/jwt-authentication.md
+      - RESTful API Design: development/architecture/restful-api-design.md
+      - Schemas Design: development/architecture/schemas-design.md
+    - Guides:
+      - Testing Guide: development/guides/testing-guide.md
+      - Git Workflow: development/guides/git-workflow.md
+      - Git Quick Reference: development/guides/git-quick-reference.md
+      - UV Package Management: development/guides/uv-package-management.md
+      - MkDocs Setup: development/guides/mkdocs-setup.md
+      - Mermaid Diagram Standards: development/guides/mermaid-diagram-standards.md
+      - Documentation Template System: development/guides/documentation-template-system.md
+    - Infrastructure:
+      - Docker Setup: development/infrastructure/docker-setup.md
+      - Environment Configuration: development/infrastructure/environment-configuration.md
+      - Database Migrations: development/infrastructure/database-migrations.md
+      - Parallel Environments: development/infrastructure/parallel-environments.md
+    - Implementation:
+      - Token Rotation Guide: development/implementation/token-rotation.md
+  - Testing:
+    - Strategy: testing/strategy.md
+    - Smoke Test Solution: testing/smoke-test-caplog-solution.md
+  - Research:
+    - Authentication Approaches: research/authentication_approaches_research.md
+    - Documentation Guide: research/documentation_guide_research.md
+  - Reviews:
+    - REST API Audit (2025-10-05): reviews/REST_API_AUDIT_REPORT_2025-10-05.md
