fix(docs): add MkDocs port mapping and clean up navigation
- Add MKDOCS_PORT (8001) to dev environment for live preview
- Update docker-compose.dev.yml to expose port 8001:8001
- Add MKDOCS_PORT=8001 to .env.dev.example
- Remove non-existent navigation entries (Getting Started, Research, Testing sections)
- Clean up mkdocs.yml nav to only include existing files

This allows running `mkdocs serve` in dev container with:
  docker compose -f compose/docker-compose.dev.yml exec app uv run mkdocs serve --dev-addr=0.0.0.0:8001

Access docs at: http://localhost:8001/Dashtam/

Related to Phase 3 (API Reference generation)

--- a/compose/docker-compose.dev.yml
+++ b/compose/docker-compose.dev.yml
@@ -49,6 +49,7 @@ services:
       - ../env/.env.dev
     ports:
       - "${APP_PORT:-8000}:8000"
+      - "${MKDOCS_PORT:-8001}:8001"
     volumes:
       # Mount entire project for full dev experience (mkdocs, config files, etc.)
       - ..:/app:rw
