feat(docs): Complete MkDocs documentation system with GitHub Pages deployment (#46)
* docs: remove deprecated index-template.md and update references

Remove the deprecated index-template.md file that has been replaced by two new
specialized templates:
- index-root-template.md: For root documentation entry point (docs/index.md only)
- index-section-template.md: For section/directory navigation pages

Updates:
- Deleted docs/templates/index-template.md
- Updated docs/templates/README.md to clarify new index templates in quick start
- Updated docs/index.md to remove index-template.md from Directory Structure

All 79 markdown files now pass linting with 0 errors.

* refactor(makefile): professional markdown linting system

Refactored markdown linting commands with production-grade quality:

**Features:**
- Unified command interface (lint-md, lint-md-fix)
- Flexible targeting (FILE, DIR, DIRS, PATTERN, PATHS)
- Safety controls (DRY_RUN, DIFF modes with confirmation prompts)
- Comprehensive inline documentation (240+ lines of comments)
- Modular helper functions for maintainability
- CI-friendly with proper exit codes

**Bug Fixes:**
- Fixed glob pattern expansion (single quotes prevent shell expansion)
- Now correctly finds all 78 markdown files (was only finding 2)
- Removed redundant ignore patterns (using .markdownlint-cli2.jsonc)

**Changes:**
- Replaced Makefile lines 362-418 with new refactored system
- Added lint-md-check to .PHONY declaration
- Updated help text with new command structure
- Created mkdocs-implementation-progress.md for session continuity

**Testing:**
- All 78 markdown files correctly detected
- Single file targeting works (FILE=README.md)
- Directory targeting works (DIR=docs/templates)
- Dry-run mode works (DRY_RUN=1)
- All test cases passing

**Documentation:**
- Comprehensive progress tracking document added
- Inline Makefile documentation for all functions
- Clear usage examples in help text

Related to: MkDocs implementation (Phase 1, Task

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # Ignore ALL actual env files in env/ directory (they contain secrets)
 # Only commit .example files
+# This includes: .env.dev, .env.test, .env.ci, .env.prod
 env/.env
 env/.env.*
 !env/.env.*.example
@@ -71,4 +72,4 @@ coverage.xml
 
 # Local development
 .local/
-tmp/
+tmp/site/
