--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -15,6 +15,7 @@ APP_VERSION=0.1.0
 ENVIRONMENT=development
 DEBUG=true
 APP_PORT=8000
+MKDOCS_PORT=8001
 HOST=0.0.0.0
 PORT=8000
 RELOAD=true
@@ -51,10 +52,10 @@ CALLBACK_BASE_URL=https://127.0.0.1:8182
 CORS_ORIGINS=https://localhost:3000,https://127.0.0.1:3000,https://localhost:8000
 
 # SSL/TLS Configuration
-SSL_CERT_FILE=certs/cert.pem
-SSL_KEY_FILE=certs/key.pem
-CALLBACK_SSL_CERT_FILE=certs/callback_cert.pem
-CALLBACK_SSL_KEY_FILE=certs/callback_key.pem
+API_SSL_CERT_FILE=certs/cert.pem
+API_SSL_KEY_FILE=certs/key.pem
+API_CALLBACK_SSL_CERT_FILE=certs/callback_cert.pem
+API_CALLBACK_SSL_KEY_FILE=certs/callback_key.pem
 
 # Callback Server Configuration
 CALLBACK_SERVER_HOST=0.0.0.0
