--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,7 +45,7 @@ jobs:
       
       - name: Install dependencies
         run: |
-          uv sync --frozen --no-dev
+          uv sync --frozen --group docs
       
       - name: Build documentation
         run: |
