fix(docs): correct GitHub Pages URL from faiyazhaider to faiyaz7283

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@
 site_name: Dashtam Documentation
 site_description: Secure, modern financial data aggregation platform - Developer documentation
 site_author: Faiyaz Haider
-site_url: https://faiyazhaider.github.io/Dashtam/
+site_url: https://faiyaz7283.github.io/Dashtam/
 
 # Repository
 repo_name: Dashtam
