--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "pytz>=2025.2",
+    "redis>=7.0.0",
     "requests>=2.32.5",
     "sqlmodel>=0.0.25",
     "urllib3>=2.5.0",
