test(rate-limiting): implement co-located test structure for complete independence
Implement DDD bounded context pattern with co-located tests in `src/rate_limiting/tests/`:

Test Infrastructure:
- Co-located test directory (src/rate_limiting/tests/)
- 25 configuration tests (test_config.py) - all passing ✅
- Pytest configuration updated (pytest.ini) to discover both locations
- Tests travel with the rate_limiting package for portability

Rationale (DDD Bounded Context):
- Rate limiting is self-contained feature, not just business logic
- Tests co-located with source enable complete package independence
- Can copy src/rate_limiting/ to new project with tests intact
- Aligns with future goal of extracting to standalone PyPI package
- Project-wide tests stay in tests/ (integration, smoke, e2e)

Configuration Tests (25 tests, 100% passing):
- RateLimitStrategy enum validation
- RateLimitStorage enum validation
- RateLimitRule Pydantic model (creation, defaults, frozen/immutable, validation)
- RateLimitConfig class methods (get_rule, has_rule, get_all_rules, get_enabled_rules)
- Endpoint configuration verification (auth, provider, Schwab API)
- Rule validation (max_tokens, refill_rate, cost must be positive)

Test Coverage:
- Configuration module: 100% (25/25 tests passing)
- Next: Algorithm, storage, and service tests

Documentation Updates:
- Updated implementation guide with co-located test structure
- Added rationale for DDD bounded context test organization
- Documented pytest.ini configuration for dual test discovery

Test Discovery:
```bash
# Run all rate limiting tests
pytest src/rate_limiting/tests/

# Run with coverage
pytest src/rate_limiting/tests/ --cov=src.rate_limiting

# All tests still work (tests/ + src/rate_limiting/tests/)
pytest
```

Related: Phase 1 Core Infrastructure Implementation

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,7 +14,11 @@ addopts =
     --color=yes
 
 # Test paths
-testpaths = tests
+# Note: src/rate_limiting/tests is co-located with the rate_limiting package
+# for complete independence and portability (DDD bounded context)
+testpaths = 
+    tests
+    src/rate_limiting/tests
 
 # Exclude old unmigrated test files
 norecursedirs = tests/tests_old_unmigrated
