test(rate-limiting): add Redis storage unit tests and complete Phase 3
This commit completes Phase 3 (Testing & Validation) by adding comprehensive
unit tests for the Redis storage backend and updating the implementation guide
to reflect actual completion status across all 3 phases.

Phase 3 is now complete with 65 total rate limiting tests across all components.

Changes:

1. Redis Storage Unit Tests (src/rate_limiting/tests/test_redis_storage.py):
   - NEW: 25 comprehensive unit tests (574 lines)
   - Tests organized into 10 test classes by functionality
   - Uses fakeredis[lua]==2.32.0 for in-memory Redis emulation
   - Tests cover all Redis storage methods:
     * Initial bucket state (2 tests)
     * Token consumption/depletion (3 tests)
     * Token refill over time (2 tests)
     * Retry-after calculation (2 tests)
     * get_remaining() method (3 tests)
     * reset() method (2 tests)
     * Error handling / fail-open (4 tests)
     * Lua script caching (2 tests)
     * Concurrent request atomicity (1 test)
     * Edge cases (4 tests)
   - All 25 tests passing in ~16 seconds
   - Fast execution with no external Redis dependency

2. Dependencies (pyproject.toml, uv.lock):
   - Added fakeredis[lua]==2.32.0 (dev dependency)
   - Added lupa==2.6 (Lua script execution)
   - Added sortedcontainers==2.4.0 (fakeredis dependency)

3. Test Configuration (pytest.ini):
   - Removed src/rate_limiting/tests from testpaths
   - Rate limiting is independent bounded context (DDD pattern)
   - Tests run manually in development only
   - Not part of main CI/CD (316 tests unchanged)
   - Future: Extractable as standalone package with own CI/CD
   - Added clear documentation comments

4. Implementation Guide (docs/development/implementation/rate-limiting-implementation.md):
   - Updated status: Phase 3 Complete
   - Updated progress: 3/5 phases complete (60%)
   - Marked completed phases: Phase 1 (PR #48), Phase 2 (PR #49), Phase 3 (PR #50)
   - Added Phase 3 implementation summ

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,11 +14,13 @@ addopts =
     --color=yes
 
 # Test paths
-# Note: src/rate_limiting/tests is co-located with the rate_limiting package
-# for complete independence and portability (DDD bounded context)
+# Note: Rate limiting is an independent bounded context (DDD pattern)
+# with co-located tests for portability. It will be extractable as a
+# standalone package in the future with its own CI/CD.
+# Rate limiting tests are run manually in development only:
+#   docker compose exec app uv run pytest src/rate_limiting/tests/
 testpaths = 
     tests
-    src/rate_limiting/tests
 
 # Exclude old unmigrated test files
 norecursedirs = tests/tests_old_unmigrated
