--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "black>=25.9.0",
+    "fakeredis[lua]>=2.32.0",
     "httpx>=0.28.1",
     "mypy>=1.18.2",
     "pytest>=8.4.2",
