feat(geolocation): add IP geolocation service with MaxMind GeoLite2
Implement GeolocationService for converting IP addresses to user-friendly location strings for session management.

Key features:
- Local GeoLite2 database lookups (<1ms, no external API calls)
- Privacy-focused (city-level precision, optional IP anonymization)
- Graceful degradation (returns 'Unknown Location' if DB missing)
- Singleton pattern for efficient resource usage

Dependencies:
- Added geoip2 package (v5.1.0) for MaxMind DB access
- Created data/geolite2/ directory structure
- Added to .gitignore (license prohibits redistribution)

Configuration:
- Added GEOLITE2_DB_PATH to Settings (/app/data/geolite2/GeoLite2-City.mmdb)
- Updated all env example files (.env.dev, .env.test, .env.ci, .env.prod)

Implementation:
- GeolocationService class with get_location() and anonymize_ip()
- get_geolocation_service() singleton factory function
- Proper error handling for missing DB, invalid IPs, private IPs

Code quality:
- ✅ All files linted (ruff check passed)
- ✅ All files formatted (ruff format, no changes needed)

--- a/env/.env.ci.example
+++ b/env/.env.ci.example
@@ -73,3 +73,6 @@ CODECOV_TOKEN=
 # GITHUB_ACTIONS=true
 # GITLAB_CI=true
 # JENKINS_URL=
+
+# Geolocation
+GEOLITE2_DB_PATH=/app/data/geolite2/GeoLite2-City.mmdb
