--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -65,3 +65,5 @@ TESTING=true
 DISABLE_EXTERNAL_CALLS=true
 MOCK_PROVIDERS=true
 FAST_ENCRYPTION=true
+# Geolocation
+GEOLITE2_DB_PATH=/app/data/geolite2/GeoLite2-City.mmdb
