--- a/env/.env.prod.example
+++ b/env/.env.prod.example
@@ -74,3 +74,6 @@ SCHWAB_REDIRECT_URI=https://127.0.0.1:8182
 # PLAID_CLIENT_ID=your_plaid_client_id
 # PLAID_SECRET=your_plaid_secret
 PLAID_ENVIRONMENT=sandbox
+
+# Geolocation
+GEOLITE2_DB_PATH=/app/data/geolite2/GeoLite2-City.mmdb
