--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "cryptography>=46.0.2",
     "email-validator>=2.3.0",
     "fastapi>=0.118.0",
+    "geoip2>=5.1.0",
     "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
     "psycopg[binary,pool]>=3.2.10",
