--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -14,8 +14,6 @@ APP_NAME=Dashtam
 APP_VERSION=0.1.0
 ENVIRONMENT=development
 DEBUG=true
-APP_PORT=8000
-MKDOCS_PORT=8001
 HOST=0.0.0.0
 PORT=8000
 RELOAD=true
@@ -45,15 +43,15 @@ PASSWORD_RESET_TOKEN_EXPIRE_HOURS=1
 
 # API Configuration
 API_V1_PREFIX=/api/v1
-API_BASE_URL=https://localhost:8000
+API_BASE_URL=https://dashtam.local
 CALLBACK_BASE_URL=https://127.0.0.1:8182
 
 # CORS Configuration
-CORS_ORIGINS=https://localhost:3000,https://127.0.0.1:3000,https://localhost:8000
+CORS_ORIGINS=https://dashtam.local,https://localhost:3000
 
-# SSL/TLS Configuration
-API_SSL_CERT_FILE=certs/cert.pem
-API_SSL_KEY_FILE=certs/key.pem
+# SSL/TLS Configuration (handled by Traefik)
+# Traefik terminates SSL, app containers use HTTP internally
+# Keep callback server certs for local OAuth development
 API_CALLBACK_SSL_CERT_FILE=certs/callback_cert.pem
 API_CALLBACK_SSL_KEY_FILE=certs/callback_key.pem
 
