--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -8,9 +8,9 @@ ENVIRONMENT=testing
 DEBUG=true
 API_V1_PREFIX=/api/v1
 
-# Server Configuration (different ports for testing)
+# Server Configuration
 HOST=0.0.0.0
-PORT=8001
+PORT=8000
 RELOAD=false
 
 # Test Database Configuration
@@ -31,12 +31,11 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
-# CORS Configuration (HTTPS for production parity)
-CORS_ORIGINS=https://localhost:3000,https://localhost:8001,https://test
+# CORS Configuration
+CORS_ORIGINS=https://test.dashtam.local
 
-# SSL/TLS Configuration (using existing certs for test environment)
-API_SSL_CERT_FILE=certs/cert.pem
-API_SSL_KEY_FILE=certs/key.pem
+# SSL/TLS Configuration (handled by Traefik)
+# Traefik terminates SSL, test containers use HTTP internally
 
 # Callback Server Configuration
 CALLBACK_SERVER_HOST=0.0.0.0
