feat(config): implement flat Settings with Pydantic
- Create src/core/config.py with flat Settings class (no nesting)
- All fields at top level following clean-slate-reference Section 1.3
- Field validators for bcrypt_rounds, URL normalization, CORS parsing
- Environment detection properties (is_development, is_testing, etc)
- Singleton pattern with @lru_cache for settings instance
- Update src/main.py to use flat field names (settings.app_name)
- Add comprehensive unit tests (14 tests, 100% coverage on config.py)
- Update env/.env.test.example with API_BASE_URL and CALLBACK_BASE_URL
- Fix docs/ structure: flat architecture/ directory (no nesting)
- All Google-style docstrings per checklist Section 16

Implements F0.3 Configuration Management
Closes #3

--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -31,6 +31,10 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
+# API Configuration
+API_BASE_URL=https://test.dashtam.local
+CALLBACK_BASE_URL=https://127.0.0.1:8184
+
 # CORS Configuration
 CORS_ORIGINS=https://test.dashtam.local
 
